# tket2

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .release-please-manifest.json  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  badger-v2-demo.ipynb  build.rs  circuit.dot  codecov.yml  dev-requirements.txt  devenv.nix  devenv.yaml  invalid.py  justfile  ms3.json  post_optimization.dot  pre-rewrite.dot  pre_optimization.dot  pyproject.toml  release-please-config.json  release-plz.toml  requirements.txt
badger-optimiser/: Cargo.toml
badger-optimiser/src/: main.rs  tracing.rs
compile-rewriter/: Cargo.toml  README.md
compile-rewriter/src/: main.rs
ext/portgraph/: Cargo.toml
ext/portgraph/src/: dot.rs  graph.rs  lib.rs  py_graph.rs  substitute.rs  toposort.rs
hit/: Cargo.toml  README.md
hit/src/: commands.rs  config.rs  constants.rs  display.rs  explore.rs  factory.rs  main.rs  storage.rs
hit/src/commands/: checkout.rs  children.rs  extract_best.rs  load.rs  log.rs  parents.rs  run.rs  show.rs
hit/src/explore/: commute_cz.rs
hugr2phir/: Cargo.toml
hugr2phir/src/: main.rs  normalize.rs
pyrs/: Cargo.toml  README.md  demo.py  demo2.py  nam_6_3.rwr  pyproject.toml  requirements.txt
pyrs/pyrs/: custom_base.py  passes.py
pyrs/src/: circuit.rs  lib.rs  libcopuy  optimiser.rs  pass.rs
pyrs/test/: test_bindings.py  test_depth.ipynb  test_optimiser.py  test_pass.py  test_portmatching.py
pyrs/test/test_files/: circ.qasm
pytket-tk2/: Cargo.toml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
pytket-tk2/pytket_tk2/: __init__.py  custom_base.py  passes.py
pytket-tk2/src/: circuit.rs  lib.rs
pytket-tk2/test/: test_bindings.py  test_optimiser.py  test_pass.py  test_portmatching.py
qis-compiler/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
qis-compiler/python/selene_hugr_qis_compiler/: __init__.py  selene_hugr_qis_compiler.pyi
qis-compiler/python/tests/: generate_hugrs.py  (+2 more)
qis-compiler/rust/: array.rs  gpu.rs  lib.rs  selene_specific.rs  utils.rs
qis-compiler/snapshots/: selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm14_call_args.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm14_dispose_context.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm14_read_result_float.snap  selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm14_read_result_int.snap
taso-optimiser/: Cargo.toml
taso-optimiser/src/: main.rs  tracing.rs
tket/: CHANGELOG.md  Cargo.toml  README.md
tket-exts/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
tket-exts/tests/: test_validate_exts.py
tket-py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
tket-py/docs/: conf.py  index.md  index.rst
tket-py/examples/: 1-Getting-Started.ipynb  2-Rewriting-Circuits.ipynb  3-Custom-Match-Replace.ipynb  3-Guppy-opt-example.ipynb  3bis-Match-Replace-for-QEC.ipynb  Guppy-opt-example.ipynb
tket-py/src/: circuit.rs  lib.rs  matcher.rs  ops.rs  optimiser.rs  passes.rs  pattern.rs  protocol.rs  rewrite.rs  types.rs  utils.rs
tket-py/test/: test_circuit.py  test_count_ops.py  test_exts.py  test_matcher.py  test_ops.py  test_optimiser.py  test_pass.py  test_pauli_prop.py  test_portmatching.py
tket-py/tket/: __init__.py  matcher.py  ops.py  optimiser.py  passes.py  pattern.py  protocol.py  rewrite.py  types.py
tket-qsystem/: CHANGELOG.md  Cargo.toml  README.md
tket-qsystem/src/: cli.rs  extension.rs  lib.rs  llvm.rs  lower_drops.rs  modifier.rs  pytket.rs  replace_bools.rs  replace_borrow_arrays.rs
tket-qsystem/tests/: guppy_opt.rs
tket/benches/: bench_main.rs
tket/examples/: badger-hadamard-opt.rs  circuit-matcher.rs
tket/src/: analysis.rs  circuit.rs  extension.rs  lib.rs  llvm.rs  modifier.rs  ops.rs  optimiser.rs  passes.rs  portmatching.rs  resource.rs  rewrite.rs  rewrite_space.rs  rich_circuit.rs  serialize.rs  subcircuit.rs
tket/tests/: badger_termination.rs  rewrite_space_explorer.rs_disabled
tket1-passes/: Cargo.toml  README.md  build.rs  cmake-toolchain-mingw.cmake  conanfile.txt
tket1-passes/conan-profiles/: README.md  linux-armv7-gcc14  linux-i686-gcc14  macos-15  macos-15-intel  windows-mingw-gcc14
tket1-passes/cpp/: .gitignore  CMakeLists.txt  build.sh  conanfile.py
tket1-passes/rust/: Cargo.toml  README.md  build.rs
tket1-passes/scripts/: build.sh
tket1-passes/src/: lib.rs
tket1-passes/tests/: tket1-on-hugr.rs
tket1-passes/tket-c-api/: conanfile.py
tket2/: CHANGELOG.md  Cargo.toml  README.md  TODOBadgerV2.md  a.txt  b.txt  build.rs
tket2-eccs/: CHANGELOG.md  README.md  pyproject.toml
tket2-exts/: CHANGELOG.md  README.md  pyproject.toml
tket2-exts/tests/: test_validate_exts.py
tket2-hseries/: CHANGELOG.md  Cargo.toml  README.md
tket2-hseries/src/: cli.rs  extension.rs  lazify_measure.rs  lib.rs  llvm.rs  lower_drops.rs  main.rs  replace_bools.rs  replace_borrow_array.rs  replace_borrow_arrays.rs
tket2-py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
tket2-py/examples/: 1-Getting-Started.ipynb  2-Rewriting-Circuits.ipynb
tket2-py/src/: circuit.rs  expr.rs  extension.rs  lib.rs  ops.rs  optimiser.rs  pass.rs  passes.rs  pattern.rs  portdiff.rs  rewrite.rs  types.rs  utils.rs
tket2-py/test/: test_bindings.py  test_circuit.py  test_exts.py  test_guppy.py  test_ops.py  test_optimiser.py  test_pass.py  test_pauli_prop.py  test_portmatching.py  util.py
tket2-py/tket2/: __init__.py  circuit.py  custom_base.py  expr.py  extension.py  ops.py  optimiser.py  passes.py  pattern.py  rewrite.py  types.py
tket2/benches/: bench_main.rs
tket2/examples/: non_dag.rs  persistent_circ.rs  persistent_circ_mpi.rs
tket2/notes/: README.md  implemenration_plan.md
tket2/src/: circuit.rs  diff.rs  extension.rs  json.rs  lib.rs  llvm.rs  ops.rs  optimiser.rs  passes.rs  portdiff.rs  portmatching.rs  rewrite.rs  rewrite_space.rs  rich_circuit.rs  serialize.rs  static_circ.rs  utils.rs
tket2/tests/: badger.rs  badger_termination.rs  badger_termination.rs.disabled  rewrite_space_explorer.rs  taso_termination.rs
(+1118 files in other folders)
