[profile.release]
lto = "thin"

[workspace]
resolver = "2"
members = [
    "tket",
    "tket-py",
    "compile-rewriter",
    "badger-optimiser",
    "tket-qsystem",
    "tket1-passes",
]
default-members = ["tket", "tket-qsystem"]

[workspace.package]
rust-version = "1.85"
edition = "2021"
homepage = "https://github.com/CQCL/tket2"
repository = "https://github.com/CQCL/tket2"
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    # Set by our CI
    'cfg(ci_run)',
    # Set by codecov
    'cfg(coverage,coverage_nightly)',
] }
missing_docs = "warn"

[workspace.lints.clippy]

# TODO: Reduce the size of error types.
result_large_err = "allow"
large_enum_variant = "allow"

[patch.crates-io]

# Uncomment to use unreleased versions of hugr
#hugr = { git = "https://github.com/CQCL/hugr", "rev" = "2bab2a1b" }
#hugr-core = { git = "https://github.com/CQCL/hugr", "rev" = "2bab2a1b" }
#hugr-passes = { git = "https://github.com/CQCL/hugr", "rev" = "2bab2a1b" }
#hugr-cli = { git = "https://github.com/CQCL/hugr", "rev" = "2bab2a1b" }
# portgraph = { git = "https://github.com/CQCL/portgraph", rev = "68b96ac737e0c285d8c543b2d74a7aa80a18202c" }

[workspace.dependencies]

# Make sure to run `just recompile-eccs` if the hugr serialisation format changes.
hugr = "0.22.4"
hugr-core = "0.22.4"
hugr-cli = "0.22.4"
portgraph = "0.15.2"
pyo3 = ">= 0.23.4, < 0.27"
itertools = "0.14.0"
tket-json-rs = "0.7.6"
tracing = "0.1.37"
portmatching = "0.3.3"
bytemuck = "1.23.2"
cgmath = "0.18.0"
chrono = "0.4.42"
clap = "4.5.48"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
delegate = "0.13.4"
derive_more = "2.0.1"
fxhash = "0.2.1"
indexmap = "2.11.4"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
peak_alloc = "0.3.0"
pest = "2.8.2"
pest_derive = "2.8.2"
petgraph = { version = ">= 0.8.1, < 0.9", default-features = false }
priority-queue = "2.6.0"
rayon = "1.11"
rmp-serde = "1.1.2"
rstest = "0.26.1"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14.1"
smol_str = "0.3.2"
strum = "0.27"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.20"
typetag = "0.2.20"
cool_asserts = "2.0.3"
zstd = "0.13.3"
anyhow = "1.0.100"
num-rational = "0.4"

[profile.release.package.tket-py]
# Some configurations to reduce the size of tket wheels
strip = true
