[tool.poetry]
name = "tket2-project"
version = "0.0.0"
description = "Namespace for the python packages in the tket2 repository. See the individual packages for more information."
authors = ["TKET development team <tket-support@quantinuum.com>"]
maintainers = ["TKET development team <tket-support@quantinuum.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "tket2", from = "tket2-py" },
    { include = "tket2_eccs", from = "tket2-eccs" },
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.1"
mypy = "^1.11.1"
hypothesis = "^6.111.1"
graphviz = "^0.20"
pre-commit = "^3.8.0"

[tool.poetry.group.tket2.dependencies]
tket2 = { path = "tket2-py", develop = true }

[tool.maturin]
# Maturin is not the build system for the workspace (it is only used for `tket2-py`).
# We mirror the `tket2-py/pyproject.toml` config here so `maturin develop` still works
# from the root of the workspace.
manifest-path = "tket2-py/Cargo.toml"
python-source = "tket2-py"
module-name = "tket2._tket2"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = "tket2-py"
