[package]
name = "badger-optimiser"
version = "0.0.0"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
tket = { path = "../tket", features = [
    "portmatching",
    "rewrite-tracing",
    "binary-eccs",
] }
tket-qsystem = { path = "../tket-qsystem", version = "0.22.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
peak_alloc = { workspace = true, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = []
peak_alloc = ["dep:peak_alloc"]
