[package]
name = "compile-rewriter"
version = "0.0.0"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
tket2 = { workspace = true, features = ["portmatching"] }
hugr = { workspace = true }
itertools = { workspace = true }
