[package]
name = "compile-rewriter"
version = "0.0.0"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
tket = { path = "../tket", features = ["portmatching", "binary-eccs"] }
