[package]
name = "hit"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
anyhow = "1.0"
enum_dispatch = "0.3"
tket = { path = "../tket", features = ["portmatching", "badgerv2_unstable"] }
tket-json-rs = { workspace = true }
hugr.workspace = true
hugr-core.workspace = true
itertools.workspace = true
derive_more.workspace = true
fxhash.workspace = true

[lints]
workspace = true
