[package]
name = "hugr2phir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
tket2 = { workspace = true }
quantinuum-hugr = { workspace = true }
rmp-serde = "1.1.2"
serde_json = "1.0.107"
itertools.workspace = true
