[package]
name = "pyrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrs"
crate-type = ["cdylib"]

[dependencies]
tket2 = { path = "../", features = ["pyo3", "portmatching"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tket-json-rs = { git = "https://github.com/CQCL/tket-json-rs", rev="619db15d3", features = [
    "pyo3",
] }
quantinuum-hugr = { workspace = true }
portgraph = { workspace = true, features = ["pyo3"] }
pyo3 = { workspace = true, features = ["extension-module"] }