[build-system]
requires = ["maturin~=1.3"]
build-backend = "maturin"

[project]
name = "pyrs"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pytket~=1.0", "pytest~=7.1"]
