[build-system]
requires = ["maturin~=1.3"]
build-backend = "maturin"

[project]
name = "pytket_tk2"
version = "0.1.0"
description = "pytket extension for the tket 2 compiler"
authors = []                                             # TODO
classifiers = []                                         # TODO
requires-python = ">=3.10"
license = "Apache-2.0"
