[package]
name = "taso-optimiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde_json = "1.0"
tket2 = { path = "../", features = ["portmatching"] }
quantinuum-hugr = { workspace = true }
itertools = { workspace = true }
tket-json-rs = { workspace = true }
peak_alloc = { version = "0.2.0", optional = true }

[features]
default = ["peak_alloc"]
peak_alloc = ["dep:peak_alloc"]