[project]
name = "tket-exts"
version = "0.10.0"
requires-python = ">=3.10"
description = "Precompiled rewrite sets for the tket compiler"
license = { file = "LICENCE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = ['hugr ~= 0.13.0']

[project.urls]
homepage = "https://github.com/CQCL/tket2/tree/main/tket-exts"
repository = "https://github.com/CQCL/tket2/tree/main/tket-exts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

