[package]
name = "tket-py"
version = "0.0.0"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false

[lints]
workspace = true

[lib]
name = "tket"
crate-type = ["cdylib"]
# This library collides with the tket crate, so we don't want to generate docs for it.
doc = false
test = false
bench = false

[dependencies]
tket = { path = "../tket", version = "0.15.0", features = [
    "portmatching",
    "binary-eccs",
] }
tket-qsystem = { path = "../tket-qsystem", version = "0.21.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tket-json-rs = { workspace = true, features = ["pyo3"] }
hugr = { workspace = true }
pyo3 = { workspace = true, features = ["py-clone", "abi3-py310"] }
num_cpus = { workspace = true }
derive_more = { workspace = true, features = ["into", "from"] }
itertools = { workspace = true }
portmatching = { workspace = true }
portgraph = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
cool_asserts = { workspace = true }
