[package]
name = "tket-py"
version = "0.0.0"
description = "Python bindings for TKET"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false

[lints]
workspace = true

[lib]
name = "tket"
crate-type = ["cdylib"]
# This library collides with the tket crate, so we don't want to generate docs for it.
doc = false
test = false
bench = false

[dependencies]
tket = { path = "../tket", version = "0.16.0", features = [
    "portmatching",
    "binary-eccs",
] }
tket-qsystem = { path = "../tket-qsystem", version = "0.22.0" }
tket1-passes = { path = "../tket1-passes", version = "0.0.0" }

derive_more = { workspace = true, features = ["into", "from"] }
hugr = { workspace = true }
itertools = { workspace = true }
num_cpus = { workspace = true }
portmatching = { workspace = true }
pyo3 = { workspace = true, features = ["py-clone", "abi3-py310"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tket-json-rs = { workspace = true, features = ["pyo3"] }

[dev-dependencies]
rstest = { workspace = true }
cool_asserts = { workspace = true }
