[project]
name = "tket"
version = "0.12.11"
requires-python = ">=3.10"
description = "Quantinuum's TKET Quantum Compiler"
license = { file = "LICENCE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]


dependencies = [
    'hugr >= 0.14.0',
    "pytket>=1.34,<3",
    'tket_eccs ~= 0.5.1',
    'tket_exts >= 0.10.1, <0.13',
]

[tool.uv.sources]
tket_eccs = { workspace = true }
tket_exts = { workspace = true }

[project.urls]
homepage = "https://github.com/CQCL/tket2/tree/main/tket-py"
repository = "https://github.com/CQCL/tket2/tree/main/tket-py"

[build-system]
requires = ["maturin~=1.7"]
build-backend = "maturin"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "myst-nb>=1.1.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-basic-ng>=1.0.0b2",
]

[tool.maturin]
# Make sure to copy any changes to the root `pyproject.toml` config too.
module-name = "tket._tket"
manifest-path = "Cargo.toml"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
# Lark throws deprecation warnings for `src_parse` and `src_constants`.
filterwarnings = "ignore::DeprecationWarning:lark.*"

[tool.pyright]
# Rust bindings have typing stubs but no python source code.
reportMissingModuleSource = "none"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[[tool.mypy.overrides]]
# Ignore errors in tikv-jemalloc.
module = "gen_run_tests.*"
ignore_errors = true
