[package]
name = "tket1-passes"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust interface for tket1-passes library"

[lib]
name = "tket1_passes"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
thiserror = "1.0"
serde.workspace = true
serde_json.workspace = true
tket-json-rs.workspace = true

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
conan2 = "0.1.7"

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
