[package]
name = "tket1-passes"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust interface for tket1-passes library"
publish = false

[lib]
name = "tket1_passes"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tket-json-rs.workspace = true

[build-dependencies]
cc.workspace = true
bindgen.workspace = true
conan2.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
